--- a/index.ipynb
+++ b/index.ipynb
@@ -186,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mexico = None\n",
+    "mexico = counties[3]\n",
     "mexico"
    ]
   },
