--- a/index.ipynb
+++ b/index.ipynb
@@ -214,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors = None\n",
+    "kindof_neighbors = countries[0:6]\n",
     "kindof_neighbors"
    ]
   },
