--- a/index.ipynb
+++ b/index.ipynb
@@ -245,11 +245,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.a # add code here"
+    "countries.append('Malta') # add code here"
    ]
   },
   {
@@ -265,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries # add code here"
    ]
   },
   {
